--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "sayantan-portfolio-react",
   "version": "1.0.0",
   "private": true,
+
+  "homepage": "https://sayantanxbtc.github.io/portfolio/",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
+
   "dependencies": {
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
@@ -21,6 +26,7 @@
     "tsparticles": "^2.10.1",
     "typed.js": "^2.1.0"
   },
+
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-react": "^4.0.0",
